v0.5.0, 26-Sep-2017
-------------------

* Allow changing statsd port
* Update underlying datadog package


v0.4.0, 03-Aug-2017
-------------------

* Allow changing statsd host (#7)
* Support python 3.6 (#7)
* Support Django 1.11 (#7)


v0.3.1, 07-Apr-2017
-------------------

* *Actually* support Django 1.10


v0.3.0, 07-Apr-2017
-------------------

* Add support for Django 1.10 style middleware


v0.2.0, 02-Jun-2016
-------------------

* Added `namespace` and `method` tags to request_time metric


v0.1.0, 01-Jun-2016
-------------------

* Forked from https://github.com/conorbranagan/django-datadog 
* Renamed from django-datadog to fdjangodog
* Changed to use local dogstatsd collector daemon rather than `ThreadStats`
* Removed exception event logging
* Added status_code tag to request_time histogram
* Added unit tests with tox / py.test
* Added Makefile to simplify testing/building package 