@@ -1,21 +1,20 @@
-import os
-import sys
 from setuptools import setup
 
 
 setup(
     name='fdjangodog',
     version='0.5.0',
-    packages = [
+    packages=[
         'fdjangodog',
     ],
-    include_package_data = True,
-    license = 'BSD',
-    description = 'Simple Django middleware for submitting timings and exceptions to Datadog.',
+    include_package_data=True,
+    license='BSD',
+    description='Simple Django middleware for submitting timings and exceptions to Datadog.',
     url='https://github.com/tom-dalton-fanduel/fdjangodog',
     author='Tom Dalton',
     author_email='tom.dalton@fanduel.com',
     install_requires=[
         'datadog==0.16.0',
+        'psutil>=5.4.0',
     ]
 )
